<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ced4da">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="ENGINEER MATHEMATICS."
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. MATHS FOR ALL"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maths01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside01"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. BTECH MATHEMATICS"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/maths02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside02"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="3. LAST MOMENT TUITION"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maths03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside03"
            android:textColor="#1d3557"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="PROGRAMMING LANGUAGE"
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. SAURABH SHUKLA SIR"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/programming01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside04"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. APNI KAKSHA"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/programming02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside05"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="3. CODE WITH HARRY"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/programming03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside06"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="ENGINEER DRAWINGS"
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. MANAS PATNAIK"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/drawing01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside07"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. LEARN AND GROW"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/drawing02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside08"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="3. TECHNICAL DRAWING"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/drawing03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside09"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="MECHANICS"
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. MANAS PATNAIK"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/mechanics01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside010"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. NPTEL-NOC IITM"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mechanics02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside011"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="3. ASHISH PUROHIT"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/mechanics03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside012"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="ELECTRONICS"
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. NESO ACADEMY"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/electronics01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside013"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. TUTORIALS POINT"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/electronics02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside014"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="3. TECH GURUKUL"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/electronics03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside015"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="ELECTRICAL"
            android:layout_marginLeft="10dp"
            android:textColor="#4c334d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1. EKEEDA"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/electrical01id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside016"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="2. GATE ACADEMY PLUS"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/electrical02id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside017"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="3. LAST MOMENT TUITIONS"
            android:textColor="#4c334d"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/electrical03id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:layout_marginLeft="250dp"
            android:text="@string/linkoutside018"
            android:textColor="#4ea8de"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>